01_python基础1/jitfailure-dolfin_expression_9a849189b995f69589f46506a7e9c298/error.log
/tmp/tmp24upyc68/dolfin_expression_9a849189b995f69589f46506a7e9c298.cpp: In member function ‘virtual void dolfin::dolfin_expression_9a849189b995f69589f46506a7e9c298::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp24upyc68/dolfin_expression_9a849189b995f69589f46506a7e9c298.cpp:63:23: error: ‘f’ was not declared in this scope
   63 |           values[0] = f*exp(-pow(beta, 2)*(pow(x[0], 2) + pow(x[1] - R0, 2)));
      |                       ^
/tmp/tmp24upyc68/dolfin_expression_9a849189b995f69589f46506a7e9c298.cpp: In member function ‘virtual double dolfin::dolfin_expression_9a849189b995f69589f46506a7e9c298::get_property(std::string) const’:
/tmp/tmp24upyc68/dolfin_expression_9a849189b995f69589f46506a7e9c298.cpp:75:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
   75 |           if (name == "beta") return beta;          if (name == "R0") return R0;
      |           ^~
/tmp/tmp24upyc68/dolfin_expression_9a849189b995f69589f46506a7e9c298.cpp:75:53: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   75 |           if (name == "beta") return beta;          if (name == "R0") return R0;
      |                                                     ^~
